--- a/training/environment.yml
+++ b/training/environment.yml
@@ -2,80 +2,80 @@ name: marl
 channels:
   - defaults
 dependencies:
-  - appnope=0.1.0=py38_1001
-  - argon2-cffi=20.1.0=py38haf1e3a3_1
-  - async_generator=1.10=py_0
-  - backcall=0.2.0=py_0
-  - bleach=3.2.1=py_0
-  - ca-certificates=2020.10.14=0
-  - certifi=2020.6.20=pyhd3eb1b0_3
-  - dbus=1.13.18=h18a8e69_0
-  - decorator=4.4.2=py_0
-  - expat=2.2.10=hb1e8313_2
-  - gettext=0.19.8.1=hb0f4f8b_2
-  - glib=2.66.1=h9bbe63b_0
-  - icu=58.2=h0a44026_3
-  - importlib-metadata=2.0.0=py_1
-  - importlib_metadata=2.0.0=1
-  - ipykernel=5.3.4=py38h5ca1d4c_0
-  - ipython_genutils=0.2.0=py38_0
-  - ipywidgets=7.5.1=py_1
-  - jedi=0.17.2=py38_0
-  - jinja2=2.11.2=py_0
-  - jpeg=9b=he5867d9_2
-  - jsonschema=3.2.0=py_2
-  - jupyter=1.0.0=py38_7
-  - jupyter_client=6.1.7=py_0
-  - jupyter_console=6.2.0=py_0
-  - jupyter_core=4.6.3=py38_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - libcxx=10.0.0=1
-  - libedit=3.1.20191231=h1de35cc_1
-  - libffi=3.3=hb1e8313_2
-  - libgfortran=3.0.1=h93005f0_2
-  - libiconv=1.16=h1de35cc_0
-  - libpng=1.6.37=ha441bb4_0
-  - libsodium=1.0.18=h1de35cc_0
-  - markupsafe=1.1.1=py38h1de35cc_1
-  - mistune=0.8.4=py38h1de35cc_1001
-  - mpi=1.0=mpich
-  - mpich=3.3.2=hc856adb_0
-  - ncurses=6.2=h0a44026_1
-  - notebook=6.1.4=py38_0
-  - openssl=1.1.1h=haf1e3a3_0
-  - packaging=20.4=py_0
-  - pandoc=2.11=h0dc7051_0
-  - pandocfilters=1.4.2=py38_1
-  - pcre=8.44=hb1e8313_0
-  - pexpect=4.8.0=py38_1
-  - pickleshare=0.7.5=py38_1001
-  - pip=20.2.2=py38_0
-  - prometheus_client=0.8.0=py_0
-  - prompt_toolkit=3.0.8=0
-  - pycparser=2.20=py_2
-  - pyparsing=2.4.7=py_0
-  - pyqt=5.9.2=py38h655552a_2
-  - pyrsistent=0.17.3=py38haf1e3a3_0
-  - python=3.8.5=h26836e1_1
-  - python-dateutil=2.8.1=py_0
-  - qt=5.9.7=h468cd18_1
-  - qtconsole=4.7.7=py_0
-  - qtpy=1.9.0=py_0
-  - readline=8.0=h1de35cc_0
-  - setuptools=49.6.0=py38_0
-  - sip=4.19.8=py38h0a44026_0
-  - six=1.15.0=py_0
-  - sqlite=3.33.0=hffcf06c_0
-  - testpath=0.4.4=py_0
-  - tk=8.6.10=hb0a8c7a_0
-  - tornado=6.0.4=py38h1de35cc_1
-  - wcwidth=0.2.5=py_0
-  - wheel=0.35.1=py_0
-  - widgetsnbextension=3.5.1=py38_0
-  - xz=5.2.5=h1de35cc_0
-  - zeromq=4.3.3=hb1e8313_3
-  - zipp=3.4.0=pyhd3eb1b0_0
-  - zlib=1.2.11=h1de35cc_3
+  - appnope=0.1.0
+  - argon2-cffi=20.1.0
+  - async_generator=1.10
+  - backcall=0.2.0
+  - bleach=3.2.1
+  - ca-certificates=2020.10.14
+  - certifi=2020.6.20
+  - dbus=1.13.18
+  - decorator=4.4.2
+  - expat=2.2.10
+  - gettext=0.19.8.1
+  - glib=2.66.1
+  - icu=58.2
+  - importlib-metadata=2.0.0
+  - importlib_metadata=2.0.0
+  - ipykernel=5.3.4
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.5.1
+  - jedi=0.17.2
+  - jinja2=2.11.2
+  - jpeg=9b
+  - jsonschema=3.2.0
+  - jupyter=1.0.0
+  - jupyter_client=6.1.7
+  - jupyter_console=6.2.0
+  - jupyter_core=4.6.3
+  - jupyterlab_pygments=0.1.2
+  - libcxx=10.0.0
+  - libedit=3.1.20191231
+  - libffi=3.3
+  - libgfortran=3.0.1
+  - libiconv=1.16
+  - libpng=1.6.37
+  - libsodium=1.0.18
+  - markupsafe=1.1.1
+  - mistune=0.8.4
+  - mpi=1.0
+  - mpich=3.3.2
+  - ncurses=6.2
+  - notebook=6.1.4
+  - openssl=1.1.1h
+  - packaging=20.4
+  - pandoc=2.11
+  - pandocfilters=1.4.2
+  - pcre=8.44
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pip=20.2.2
+  - prometheus_client=0.8.0
+  - prompt_toolkit=3.0.8
+  - pycparser=2.20
+  - pyparsing=2.4.7
+  - pyqt=5.9.2
+  - pyrsistent=0.17.3
+  - python=3.8.5
+  - python-dateutil=2.8.1
+  - qt=5.9.7
+  - qtconsole=4.7.7
+  - qtpy=1.9.0
+  - readline=8.0
+  - setuptools=49.6.0
+  - sip=4.19.8
+  - six=1.15.0
+  - sqlite=3.33.0
+  - testpath=0.4.4
+  - tk=8.6.10
+  - tornado=6.0.4
+  - wcwidth=0.2.5
+  - wheel=0.35.1
+  - widgetsnbextension=3.5.1
+  - xz=5.2.5
+  - zeromq=4.3.3
+  - zipp=3.4.0
+  - zlib=1.2.11
   - pip:
     - absl-py==0.10.0
     - astroid==2.4.2
