--- a/training/configs/base_config.yaml
+++ b/training/configs/base_config.yaml
@@ -10,7 +10,12 @@ trainer:
   ppo_steps: 25
   eps: 0.25
   target_kl: 0.01
+
+  value_steps: 25
+
   entropy_coeff: 0.1
+  entropy_decay_time: 100
+  min_entropy: 0.1
 
   use_gpu: false
 
@@ -30,6 +35,6 @@ model:
   hidden_sizes: !!python/tuple [64, 64]
   separate_value: true
 
-  sigma0: 0.3
+  sigma0: 0.7
 
   initializer: kaiming_uniform
