--- a/training/requirements.txt
+++ b/training/requirements.txt
@@ -1,30 +1,72 @@
 absl-py==0.10.0
+anyio==2.0.2
+appnope @ file:///opt/concourse/worker/volumes/live/0291c9e1-4b15-459f-623e-2770f55be269/volume/appnope_1594338395037/work
+argon2-cffi @ file:///opt/concourse/worker/volumes/live/59af29ac-4890-416e-7ab7-794f8d6f7ecd/volume/argon2-cffi_1596828548321/work
+astroid==2.4.2
+astunparse==1.6.3
+async-generator==1.10
+attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
+Babel==2.9.0
+backcall==0.2.0
+bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
+cachetools==4.1.1
+cattrs==1.0.0
+certifi==2020.12.5
+cffi @ file:///opt/concourse/worker/volumes/live/b9607b09-b777-4ff7-53dc-287727eb8574/volume/cffi_1600699191154/work
+chardet==3.0.4
+cloudpickle==1.3.0
+cycler==0.10.0
+dataclasses==0.6
+decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
 flax==0.2.1
 future==0.18.2
+gast==0.3.3
 google-auth==1.22.1
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
 grpcio==1.32.0
 gym==0.17.2
 h5py==2.10.0
+idna==2.10
+importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
+ipykernel @ file:///opt/concourse/worker/volumes/live/88f541d3-5a27-498f-7391-f2e50ca36560/volume/ipykernel_1596206680118/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///opt/concourse/worker/volumes/live/26969e8f-c9f7-42dc-6ffb-b3effd424c49/volume/ipython_1604101242376/work
 ipython-genutils==0.2.0
+ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1601490159889/work
 isort==5.5.3
 jax==0.1.77
+jedi @ file:///opt/concourse/worker/volumes/live/c63c70ef-654a-4d26-6b78-37aef096f225/volume/jedi_1596490811751/work
 Jinja2==2.11.2
 json5==0.9.5
+jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
 jupyter==1.0.0
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
+jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1598884538475/work
 jupyter-core==4.6.3
-jupyterlab==2.2.8
-jupyterlab-server==1.2.0
+jupyter-server==1.1.4
+jupyterlab==3.0.1
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+jupyterlab-server==2.0.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 Markdown==3.3.2
+MarkupSafe @ file:///opt/concourse/worker/volumes/live/cb778296-98db-45ad-411e-6f726e102dc3/volume/markupsafe_1594371638608/work
 matplotlib==3.3.2
 mccabe==0.6.1
+mistune @ file:///opt/concourse/worker/volumes/live/95802d64-d39c-491b-74ce-b9326880ca54/volume/mistune_1594373201816/work
 mlagents==0.22.0
 mlagents-envs==0.22.0
+mpi4py @ file:///opt/concourse/worker/volumes/live/fca30028-871b-40ff-5341-2abd43669f0d/volume/mpi4py_1594374056601/work
 msgpack==1.0.0
+nbclassic==0.2.5
+nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
+nbconvert @ file:///opt/concourse/worker/volumes/live/2b9c1d93-d0fd-432f-7d93-66c93d81b614/volume/nbconvert_1601914875037/work
+nbformat @ file:///tmp/build/80754af9/nbformat_1602783287752/work
+nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1601499549014/work
+notebook @ file:///opt/concourse/worker/volumes/live/be0f3504-189d-4bae-4e57-c5d6da73ffcd/volume/notebook_1601501605350/work
 numpy==1.19.2
 oauthlib==3.1.0
 opt-einsum==3.3.0
@@ -32,19 +74,26 @@ packaging==20.4
 pandas==1.1.2
 pandocfilters==1.4.2
 parso==0.7.1
+pexpect @ file:///opt/concourse/worker/volumes/live/8701bb20-ad87-46c7-5108-30c178cf97e5/volume/pexpect_1594383388344/work
+pickleshare @ file:///opt/concourse/worker/volumes/live/93ec39d8-05bb-4f84-7efc-98735bc39b70/volume/pickleshare_1594384101884/work
 Pillow==7.2.0
 prometheus-client==0.8.0
+prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
 protobuf==3.13.0
 ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
 pyglet==1.5.0
+Pygments @ file:///tmp/build/80754af9/pygments_1604103097372/work
 pylint==2.6.0
 pyparsing==2.4.7
+pyrsistent @ file:///opt/concourse/worker/volumes/live/ff11f3f0-615b-4508-471d-4d9f19fa6657/volume/pyrsistent_1600141727281/work
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
 pyzmq==19.0.2
+qtconsole @ file:///tmp/build/80754af9/qtconsole_1600870028330/work
 QtPy==1.9.0
 requests==2.24.0
 requests-oauthlib==1.3.0
@@ -53,6 +102,7 @@ scipy==1.5.2
 seaborn==0.11.0
 Send2Trash==1.5.0
 six==1.15.0
+sniffio==1.2.0
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
@@ -62,10 +112,14 @@ terminado==0.9.1
 testpath==0.4.4
 toml==0.10.1
 torch==1.7.0
-tornado==6.0.4
+tornado==6.1
 tqdm==4.49.0
+traitlets @ file:///tmp/build/80754af9/traitlets_1602787416690/work
+typing-extensions==3.7.4.3
 urllib3==1.25.10
+wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
+zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
