--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,7 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.5",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.ml-agents": "1.0.6",
+    "com.unity.ml-agents": "1.7.2-preview",
     "com.unity.test-framework": "1.1.19",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.2.16",
