--- a/training/configs/base_config.yaml
+++ b/training/configs/base_config.yaml
@@ -21,7 +21,7 @@ trainer:
     eps: 0.25
     target_kl: 0.01
 
-    value_steps: 25
+    value_coeff: 1.0
 
     entropy_coeff: 0.001
     entropy_decay_time: 100
