--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ PettingZoo = {extras = ["sisl"], version = "^1.5.2"}
 numba = "^0.52.0"
 gym-unity = "^0.24"
 pytest = "^6.2.2"
+coverage = "^5.5"
 
 
 [tool.poetry.dev-dependencies]
