--- a/coltra/environment.yml
+++ b/coltra/environment.yml
@@ -1,156 +1,145 @@
-name: marl
+name: crowd
 channels:
   - defaults
 dependencies:
-  - argon2-cffi=20.1.0
-  - async_generator=1.10
-  - backcall=0.2.0
-  - bleach=3.2.1
-  - ca-certificates=2020.10.14
-  - certifi=2020.6.20
-  - dbus=1.13.18
-  - decorator=4.4.2
-  - expat=2.2.10
-  - gettext=0.19.8.1
-  - glib=2.66.1
-  - icu=58.2
-  - importlib-metadata=2.0.0
-  - importlib_metadata=2.0.0
-  - ipykernel=5.3.4
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.5.1
-  - jedi=0.17.2
-  - jinja2=2.11.2
-  - jpeg=9b
-  - jsonschema=3.2.0
-  - jupyter=1.0.0
-  - jupyter_client=6.1.7
-  - jupyter_console=6.2.0
-  - jupyter_core=4.6.3
-  - jupyterlab_pygments=0.1.2
-  - libedit=3.1.20191231
-  - libffi=3.3
-  - libpng=1.6.37
-  - libsodium=1.0.18
-  - markupsafe=1.1.1
-  - mistune=0.8.4
-  - mpi=1.0
-  - mpich=3.3.2
-  - ncurses=6.2
-  - notebook=6.1.4
-  - openssl=1.1.1h
-  - packaging=20.4
-  - pandoc=2.11
-  - pandocfilters=1.4.2
-  - pcre=8.44
-  - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pip=20.2.2
-  - prometheus_client=0.8.0
-  - prompt_toolkit=3.0.8
-  - pycparser=2.20
-  - pyparsing=2.4.7
-  - pyqt=5.9.2
-  - pyrsistent=0.17.3
-  - python=3.8.5
-  - python-dateutil=2.8.1
-  - qt=5.9.7
-  - qtconsole=4.7.7
-  - qtpy=1.9.0
-  - readline=8.0
-  - setuptools=49.6.0
-  - sip=4.19.8
-  - six=1.15.0
-  - sqlite=3.33.0
-  - testpath=0.4.4
-  - tk=8.6.10
-  - tornado=6.0.4
-  - wcwidth=0.2.5
-  - wheel=0.35.1
-  - widgetsnbextension=3.5.1
-  - xz=5.2.5
-  - zeromq=4.3.3
-  - zipp=3.4.0
-  - zlib=1.2.11
+  - ca-certificates=2021.1.19=hecd8cb5_0
+  - certifi=2020.12.5=py38hecd8cb5_0
+  - libcxx=10.0.0=1
+  - libedit=3.1.20191231=h1de35cc_1
+  - libffi=3.3=hb1e8313_2
+  - ncurses=6.2=h0a44026_1
+  - openssl=1.1.1j=h9ed2024_0
+  - pip=21.0.1=py38hecd8cb5_0
+  - python=3.8.5=h26836e1_1
+  - readline=8.1=h9ed2024_0
+  - setuptools=52.0.0=py38hecd8cb5_0
+  - sqlite=3.33.0=hffcf06c_0
+  - tk=8.6.10=hb0a8c7a_0
+  - wheel=0.36.2=pyhd3eb1b0_0
+  - xz=5.2.5=h1de35cc_0
+  - zlib=1.2.11=h1de35cc_3
   - pip:
-    - absl-py==0.10.0
-    - astroid==2.4.2
-    - astunparse==1.6.3
-    - attrs==20.2.0
-    - cachetools==4.1.1
+    - absl-py==0.11.0
+    - anyio==2.2.0
+    - appnope==0.1.2
+    - argon2-cffi==20.1.0
+    - async-generator==1.10
+    - attrs==20.3.0
+    - babel==2.9.0
+    - backcall==0.2.0
+    - bleach==3.3.0
+    - cachetools==4.2.1
     - cattrs==1.0.0
-    - cffi==1.14.2
-    - chardet==3.0.4
-    - cloudpickle==1.3.0
+    - cffi==1.14.5
+    - chardet==4.0.0
+    - chex==0.0.4
+    - cloudpickle==1.6.0
+    - coverage==5.5
     - cycler==0.10.0
+    - decorator==4.4.2
     - defusedxml==0.6.0
+    - dm-tree==0.1.5
     - entrypoints==0.3
-    - flax==0.2.1
+    - flatbuffers==1.12
+    - flax==0.3.2
     - future==0.18.2
-    - gast==0.3.3
-    - google-auth==1.22.1
-    - google-auth-oauthlib==0.4.1
-    - google-pasta==0.2.0
-    - grpcio==1.32.0
-    - gym==0.17.2
-    - h5py==2.10.0
+    - google-auth==1.27.0
+    - google-auth-oauthlib==0.4.2
+    - grpcio==1.36.1
+    - gym==0.18.0
+    - gym-unity==0.24.0
+    - h5py==3.2.0
     - idna==2.10
-    - ipython==7.18.1
+    - iniconfig==1.1.1
+    - ipykernel==5.5.0
+    - ipython==7.21.0
     - ipython-genutils==0.2.0
-    - isort==5.5.3
-    - jax==0.1.77
+    - ipywidgets==7.6.3
+    - jax==0.2.9
+    - jaxlib==0.1.61
+    - jedi==0.18.0
+    - jinja2==2.11.3
     - json5==0.9.5
-    - jupyterlab==2.2.8
-    - jupyterlab-pygments==0.1.1
-    - jupyterlab-server==1.2.0
-    - keras-preprocessing==1.1.2
-    - kiwisolver==1.2.0
-    - lazy-object-proxy==1.4.3
-    - markdown==3.3.2
-    - matplotlib==3.3.2
-    - mccabe==0.6.1
-    - mlagents==0.21.0
-    - mlagents-envs==0.21.0
-    - msgpack==1.0.0
-    - nbclient==0.5.0
-    - nbconvert==6.0.3
-    - nbformat==5.0.7
-    - nest-asyncio==1.4.0
-    - numpy==1.19.2
+    - jsonschema==3.2.0
+    - jupyter==1.0.0
+    - jupyter-client==6.1.11
+    - jupyter-console==6.2.0
+    - jupyter-core==4.7.1
+    - jupyter-packaging==0.7.12
+    - jupyter-server==1.4.1
+    - jupyterlab==3.0.9
+    - jupyterlab-pygments==0.1.2
+    - jupyterlab-server==2.3.0
+    - jupyterlab-widgets==1.0.0
+    - kiwisolver==1.3.1
+    - llvmlite==0.35.0
+    - markdown==3.3.4
+    - markupsafe==1.1.1
+    - matplotlib==3.3.4
+    - mistune==0.8.4
+    - mlagents==0.24.0
+    - mlagents-envs==0.24.0
+    - msgpack==1.0.2
+    - nbclassic==0.2.6
+    - nbclient==0.5.3
+    - nbconvert==6.0.7
+    - nbformat==5.1.2
+    - nest-asyncio==1.5.1
+    - notebook==6.2.0
+    - numba==0.52.0
+    - numpy==1.20.1
     - oauthlib==3.1.0
     - opt-einsum==3.3.0
-    - pandas==1.1.2
-    - parso==0.7.1
+    - packaging==20.9
+    - pandas==1.2.3
+    - pandocfilters==1.4.3
+    - parso==0.8.1
+    - pexpect==4.8.0
+    - pickleshare==0.7.5
     - pillow==7.2.0
-    - prompt-toolkit==3.0.7
-    - protobuf==3.13.0
-    - ptyprocess==0.6.0
+    - pluggy==0.13.1
+    - prometheus-client==0.9.0
+    - prompt-toolkit==3.0.16
+    - protobuf==3.15.3
+    - ptyprocess==0.7.0
+    - py==1.10.0
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
+    - pycparser==2.20
     - pyglet==1.5.0
-    - pygments==2.7.1
-    - pylint==2.6.0
-    - pytz==2020.1
-    - pyyaml==5.3.1
-    - pyzmq==19.0.2
-    - requests==2.24.0
+    - pygments==2.8.0
+    - pyparsing==2.4.7
+    - pyrsistent==0.17.3
+    - pytest==6.2.2
+    - python-dateutil==2.8.1
+    - pytz==2021.1
+    - pyyaml==5.4.1
+    - pyzmq==22.0.3
+    - qtconsole==5.0.2
+    - qtpy==1.9.0
+    - requests==2.25.1
     - requests-oauthlib==1.3.0
-    - rsa==4.6
-    - scipy==1.5.2
-    - seaborn==0.11.0
+    - rsa==4.7.2
+    - scipy==1.6.1
+    - seaborn==0.11.1
     - send2trash==1.5.0
-    - tensorboard==2.3.0
-    - tensorboard-plugin-wit==1.7.0
-    - tensorflow==2.3.1
-    - tensorflow-estimator==2.3.0
-    - termcolor==1.1.0
-    - terminado==0.8.3
-    - toml==0.10.1
-    - torch==1.6.0
-    - tqdm==4.49.0
-    - traitlets==5.0.4
-    - urllib3==1.25.10
+    - six==1.15.0
+    - sniffio==1.2.0
+    - tensorboard==2.4.1
+    - tensorboard-plugin-wit==1.8.0
+    - terminado==0.9.2
+    - testpath==0.4.4
+    - toml==0.10.2
+    - toolz==0.11.1
+    - torch==1.7.1
+    - tornado==6.1
+    - tqdm==4.58.0
+    - traitlets==5.0.5
+    - typarse==3.3.0
+    - typing-extensions==3.7.4.3
+    - urllib3==1.26.3
+    - wcwidth==0.2.5
     - webencodings==0.5.1
     - werkzeug==1.0.1
-    - wrapt==1.12.1
-prefix: /Users/redtachyon/anaconda3/envs/marl
+    - widgetsnbextension==3.5.1
+prefix: /Users/redtachyon/anaconda3/envs/crowd
