Add new conda env

--- a/coltra/environment.yml
+++ b/coltra/environment.yml
@@ -2,22 +2,22 @@ name: crowd
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2021.1.19=hecd8cb5_0
-  - certifi=2020.12.5=py38hecd8cb5_0
-  - libcxx=10.0.0=1
-  - libedit=3.1.20191231=h1de35cc_1
-  - libffi=3.3=hb1e8313_2
-  - ncurses=6.2=h0a44026_1
-  - openssl=1.1.1j=h9ed2024_0
-  - pip=21.0.1=py38hecd8cb5_0
-  - python=3.8.3=h26836e1_2
-  - readline=8.1=h9ed2024_0
-  - setuptools=52.0.0=py38hecd8cb5_0
-  - sqlite=3.33.0=hffcf06c_0
-  - tk=8.6.10=hb0a8c7a_0
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - xz=5.2.5=h1de35cc_0
-  - zlib=1.2.11=h1de35cc_3
+  - ca-certificates=2021.1.19
+  - certifi=2020.12.5
+  - libcxx=10.0.0
+  - libedit=3.1.20191231
+  - libffi=3.3
+  - ncurses=6.2
+  - openssl=1.1.1j
+  - pip=21.0.1
+  - python=3.8.3
+  - readline=8.1
+  - setuptools=52.0.0
+  - sqlite=3.33.0
+  - tk=8.6.10
+  - wheel=0.36.2
+  - xz=5.2.5
+  - zlib=1.2.11
   - pip:
     - absl-py==0.11.0
     - anyio==2.2.0
