--- a/coltra/configs/base_config.yaml
+++ b/coltra/configs/base_config.yaml
@@ -16,7 +16,7 @@ trainer:
       amsgrad: false
 
     gamma: 0.9
-    eta: 0.0
+    eta: 0.5
     gae_lambda: 0.95
 
     eps: 0.25
@@ -32,7 +32,7 @@ trainer:
     use_gpu: false
 
 model:
-  input_size: 4
+  input_size:
   num_activations: 2
   activation: tanh
 
