--- a/coltra/configs/base_config.yaml
+++ b/coltra/configs/base_config.yaml
@@ -21,12 +21,12 @@ trainer:
 
     eps: 0.25
     target_kl: 0.03
-    entropy_coeff: 0.001
+    entropy_coeff: 0.0
     entropy_decay_time: 100
-    min_entropy: 0.001
+    min_entropy: 0.0
     value_coeff: 1.0
 
-    ppo_epochs: 3
+    ppo_epochs: 5
     minibatch_size: 8192
 
     use_gpu: false
@@ -36,7 +36,7 @@ model:
   num_activations: 2
   activation: tanh
 
-  hidden_sizes: [32, 32]
+  hidden_sizes: [64, 64, 64]
   separate_value: true
 
   sigma0: 0.7
