--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -18,9 +18,11 @@ trainer:
       weight_decay: 0
       amsgrad: false
 
-    gamma: 0.9
+    gamma: 0.99
     eta: 0.5
     gae_lambda: 0.95
+
+    advantage_normalization: false
 
     eps: 0.25
     target_kl: 0.03
