--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -9,9 +9,9 @@ trainer:
   tensorboard_name:
   save_freq: 10
 
-  ppo_config:
+  PPOConfig:
     optimizer: adam
-    optimizer_kwargs:
+    OptimizerKwargs:
       lr: 0.0001
       betas: !!python/tuple [0.9, 0.999]
       eps: 1.0e-07
@@ -22,7 +22,7 @@ trainer:
     eta: 0.5
     gae_lambda: 0.95
 
-    advantage_normalization: false
+    advantage_normalization: true
 
     eps: 0.25
     target_kl: 0.03
@@ -56,6 +56,5 @@ model:
   vec_hidden_layers: [32, 32]
   rel_hidden_layers: [32, 32]
   com_hidden_layers: [32, 32]
-  num_action: 2
 
   initializer: kaiming_uniform
