--- a/configs/gym_config.yaml
+++ b/configs/gym_config.yaml
@@ -1,28 +1,25 @@
 ---
 trainer:
-  steps: 500
+  steps: 1000
   workers: 8
-
-  mode: random
-  num_agents: 20
 
   tensorboard_name:
   save_freq: 10
 
-  ppo_config:
+  PPOConfig:
     optimizer: adam
-    optimizer_kwargs:
-      lr: 0.0001
+    OptimizerKwargs:
+      lr: 0.0003
       betas: !!python/tuple [0.9, 0.999]
       eps: 1.0e-07
       weight_decay: 0
       amsgrad: false
 
     gamma: 0.99
-    eta: 0.5
+    eta: 0.0
     gae_lambda: 0.95
 
-    advantage_normalization: false
+    advantage_normalization: true
 
     eps: 0.25
     target_kl: 0.03
@@ -31,18 +28,18 @@ trainer:
     min_entropy: 0.0
     value_coeff: 1.0
 
-    ppo_epochs: 5
-    minibatch_size: 8192
+    ppo_epochs: 10
+    minibatch_size: 8000
 
     use_gpu: false
 
 model:
   input_size:
-  num_actions: 2
+  num_actions:
   activation: tanh
-  discrete: true
+  discrete:
 
-  hidden_sizes: [64, 64, 64]
+  hidden_sizes: [16, 16]
   separate_value: true
 
   rays_input_size:
@@ -56,6 +53,5 @@ model:
   vec_hidden_layers: [32, 32]
   rel_hidden_layers: [32, 32]
   com_hidden_layers: [32, 32]
-  num_action: 2
 
-  initializer: kaiming_uniform
+  initializer: xavier_uniform
