--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.4",
-    "com.unity.ide.rider": "3.0.7",
-    "com.unity.ide.visualstudio": "2.0.12",
-    "com.unity.ide.vscode": "1.2.4",
+    "com.unity.collab-proxy": "1.15.15",
+    "com.unity.ide.rider": "3.0.13",
+    "com.unity.ide.visualstudio": "2.0.14",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.ml-agents": "2.0.1",
-    "com.unity.test-framework": "1.1.29",
+    "com.unity.nuget.newtonsoft-json": "3.0.2",
+    "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.3",
+    "com.unity.timeline": "1.6.4",
     "com.unity.toolchain.linux-x86_64": "0.1.19-preview",
     "com.unity.toolchain.macos-x86_64-linux-x86_64": "0.1.20-preview",
     "com.unity.ugui": "1.0.0",
