--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "1.17.2",
     "com.unity.ide.rider": "3.0.15",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.4.4",
     "com.unity.ml-agents": "2.2.1-exp.1",
     "com.unity.nuget.newtonsoft-json": "3.0.2",
+    "com.unity.recorder": "3.0.3",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
